--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<p class="monologue">
 				<span class="verse">the constellations were named by the ancient Greeks…</span>
 				<span class="verse">and those stars are still there</span>
-				<span class="verse">as bright as they always have been.</span>
+				<span class="verse">as <b>bright</b> as they always have been.</span>
 			</p>
 		</div>
 	</div>
@@ -66,8 +66,8 @@
 			<p class="monologue">
 				<span class="verse">I want to leave my mark, so no one ever forgets</span>
 				<span class="verse">my dream</span>
-				<span class="verse">to shine like a star,</span>
-				<span class="verse">a dazzling light,</span>
+				<span class="verse">to shine like a <b>star</b>,</span>
+				<span class="verse">a <b>dazzling light</b>,</span>
 				<span class="verse">against the cold expanse.</span>
 			</p>
 		</div>
@@ -77,7 +77,7 @@
 			<p class="monologue">
 				<span class="verse">my story</span>
 				<span class="verse">fulfilling my dreams of skating not just for myself</span>
-				<span class="verse">but for everyone.</span>
+				<span class="verse">but <b>for everyone</b>.</span>
 			</p>
 		</div>
 	</div>
@@ -85,9 +85,9 @@
 		<div class="vert-middle-block">
 			<p class="monologue">
 				<span class="verse">my constellation</span>
-				<span class="verse">my mark on this lake,</span>
-				<span class="verse">my canvas</span>
-				<span class="verse">my piece of the world.</span>
+				<span class="verse">my <b>mark</b> on this lake,</span>
+				<span class="verse"><b>my canvas</b></span>
+				<span class="verse">my piece of the <b>world</b>.</span>
 			</p>
 		</div>
 	</div>
