Minor: Changed .monologue <div>s to <p>s
• Changed each of the `<div class="monologue">`s to instead be a `<p class="monologue">`.
	» As with the `span.verse`s, this is what the <p> tag is for— paragraphs.  Might as well use it.

--- a/index.html
+++ b/index.html
@@ -34,27 +34,27 @@
 	
 	<div class="container vh-100">
 		<div class="vert-middle-block">
-			<div class="monologue">
+			<p class="monologue">
 				<span class="verse">there you are.</span>
 				<span class="verse">I missed you.</span>
-			</div>
+			</p>
 		</div>
 	</div>
 	<div class="container vh-75">
 		<div class="vert-middle-block">
-			<div class="monologue">
+			<p class="monologue">
 				<span class="verse">you know what I've been thinking a lot about lately?</span>
 				<span class="verse">the stars</span>
-			</div>
+			</p>
 		</div>
 	</div>
 	<div class="container vh-75">
 		<div class="vert-middle-block">
-			<div class="monologue">
+			<p class="monologue">
 				<span class="verse">the constellations were named by the ancient Greeks…</span>
 				<span class="verse">and those stars are still there</span>
 				<span class="verse">as bright as they always have been.</span>
-			</div>
+			</p>
 		</div>
 	</div>
 </section>
@@ -63,32 +63,32 @@
 	
 	<div class="container vh-50">
 		<div class="vert-middle-block">
-			<div class="monologue">
+			<p class="monologue">
 				<span class="verse">I want to leave my mark, so no one ever forgets</span>
 				<span class="verse">my dream</span>
 				<span class="verse">to shine like a star,</span>
 				<span class="verse">a dazzling light,</span>
 				<span class="verse">against the cold expanse.</span>
-			</div>
+			</p>
 		</div>
 	</div>
 	<div class="container vh-50">
 		<div class="vert-middle-block">
-			<div class="monologue">
+			<p class="monologue">
 				<span class="verse">my story</span>
 				<span class="verse">fulfilling my dreams of skating not just for myself</span>
 				<span class="verse">but for everyone.</span>
-			</div>
+			</p>
 		</div>
 	</div>
 	<div class="container vh-50">
 		<div class="vert-middle-block">
-			<div class="monologue">
+			<p class="monologue">
 				<span class="verse">my constellation</span>
 				<span class="verse">my mark on this lake,</span>
 				<span class="verse">my canvas</span>
 				<span class="verse">my piece of the world.</span>
-			</div>
+			</p>
 		</div>
 	</div>
 </section>
