--- a/index.html
+++ b/index.html
@@ -35,25 +35,25 @@
 	<div class="container vh-100">
 		<div class="vert-middle-block">
 			<p class="monologue">
-				<span class="verse">there you are.</span>
-				<span class="verse">I missed you.</span>
+				<span class="verse text-center">there you are.</span>
+				<span class="verse text-left col-xs-offset-6 col-xs-6">I missed you.</span>
 			</p>
 		</div>
 	</div>
 	<div class="container vh-75">
 		<div class="vert-middle-block">
 			<p class="monologue">
-				<span class="verse">you know what I've been thinking a lot about lately?</span>
-				<span class="verse">the stars</span>
+				<span class="verse text-center">you know what I've been thinking a lot about lately?</span>
+				<span class="verse text-center">the stars</span>
 			</p>
 		</div>
 	</div>
 	<div class="container vh-75">
 		<div class="vert-middle-block">
 			<p class="monologue">
-				<span class="verse">the constellations were named by the ancient Greeks…</span>
-				<span class="verse">and those stars are still there</span>
-				<span class="verse">as <b>bright</b> as they always have been.</span>
+				<span class="verse text-center">the constellations were named by the ancient Greeks…</span>
+				<span class="verse text-center">and those stars are still there</span>
+				<span class="verse text-center">as <b>bright</b> as they always have been.</span>
 			</p>
 		</div>
 	</div>
@@ -64,30 +64,30 @@
 	<div class="container vh-50">
 		<div class="vert-middle-block">
 			<p class="monologue">
-				<span class="verse">I want to leave my mark, so no one ever forgets</span>
-				<span class="verse">my dream</span>
-				<span class="verse">to shine like a <b>star</b>,</span>
-				<span class="verse">a <b>dazzling light</b>,</span>
-				<span class="verse">against the cold expanse.</span>
+				<span class="verse text-center">I want to leave my mark, so no one ever forgets</span>
+				<span class="verse text-center">my dream</span>
+				<span class="verse text-right col-xs-6">to shine like a <b>star</b>,</span>
+				<span class="verse text-center">a <b>dazzling light</b>,</span>
+				<span class="verse text-left col-xs-offset-6 col-xs-6">against the cold expanse.</span>
 			</p>
 		</div>
 	</div>
 	<div class="container vh-50">
 		<div class="vert-middle-block">
 			<p class="monologue">
-				<span class="verse">my story</span>
-				<span class="verse">fulfilling my dreams of skating not just for myself</span>
-				<span class="verse">but <b>for everyone</b>.</span>
+				<span class="verse text-center">my story</span>
+				<span class="verse text-center">fulfilling my dreams of skating not just for myself</span>
+				<span class="verse text-center">but <b>for everyone</b>.</span>
 			</p>
 		</div>
 	</div>
 	<div class="container vh-50">
 		<div class="vert-middle-block">
 			<p class="monologue">
-				<span class="verse">my constellation</span>
-				<span class="verse">my <b>mark</b> on this lake,</span>
-				<span class="verse"><b>my canvas</b></span>
-				<span class="verse">my piece of the <b>world</b>.</span>
+				<span class="verse text-center">my constellation</span>
+				<span class="verse text-right col-xs-6">my <b>mark</b> on this lake,</span>
+				<span class="verse text-center"><b>my canvas</b></span>
+				<span class="verse text-left col-xs-offset-6 col-xs-6">my piece of the <b>world</b>.</span>
 			</p>
 		</div>
 	</div>
