Minor: Made every .container into a <section>
• Turned every `div.container` element into a `section.container`.	» So that we can use <header> tags where we want and still be HTML-semantically correct.

--- a/index.html
+++ b/index.html
@@ -32,23 +32,23 @@
 		</div>
 	</div>
 	
-	<div class="container vh-100">
+	<section class="container vh-100">
 		<div class="vert-middle-block">
 			<p class="monologue">
 				<span class="verse text-center">there you are.</span>
 				<span class="verse text-left col-xs-offset-6 col-xs-6">I missed you.</span>
 			</p>
 		</div>
-	</div>
-	<div class="container vh-75">
+	</section>
+	<section class="container vh-75">
 		<div class="vert-middle-block">
 			<p class="monologue">
 				<span class="verse text-center">you know what I've been thinking a lot about lately?</span>
 				<span class="verse text-center">the stars</span>
 			</p>
 		</div>
-	</div>
-	<div class="container vh-75">
+	</section>
+	<section class="container vh-75">
 		<div class="vert-middle-block">
 			<p class="monologue">
 				<span class="verse text-center">the constellations were named by the ancient Greeks…</span>
@@ -56,12 +56,12 @@
 				<span class="verse text-center">as <b>bright</b> as they always have been.</span>
 			</p>
 		</div>
-	</div>
+	</section>
 </section>
 <section id="ambitions-phase" class="base-height-rel">
 	<div class="back fill"></div>
 	
-	<div class="container vh-50">
+	<section class="container vh-50">
 		<div class="vert-middle-block">
 			<p class="monologue">
 				<span class="verse text-center">I want to leave my mark, so no one ever forgets</span>
@@ -71,8 +71,8 @@
 				<span class="verse text-left col-xs-offset-6 col-xs-6">against the cold expanse.</span>
 			</p>
 		</div>
-	</div>
-	<div class="container vh-50">
+	</section>
+	<section class="container vh-50">
 		<div class="vert-middle-block">
 			<p class="monologue">
 				<span class="verse text-center">my story</span>
@@ -80,8 +80,8 @@
 				<span class="verse text-center">but <b>for everyone</b>.</span>
 			</p>
 		</div>
-	</div>
-	<div class="container vh-50">
+	</section>
+	<section class="container vh-50">
 		<div class="vert-middle-block">
 			<p class="monologue">
 				<span class="verse text-center">my constellation</span>
@@ -90,14 +90,14 @@
 				<span class="verse text-left col-xs-offset-6 col-xs-6">my piece of the <b>world</b>.</span>
 			</p>
 		</div>
-	</div>
+	</section>
 </section>
 <section id="title-phase" class="screen-height-rel">
 	<div class="back fill">
 		<div id="lakestrip" class="back image"></div>
 	</div>
 	
-	<div class="container vh-100">
+	<section class="container vh-100">
 		<div id="title-logo">
 			<div class="inner">
 				<img id="lacquer" src="graphics/logo_lacquer_slanted.293x164.svg" width="293" height="164">
@@ -115,7 +115,7 @@
 				<img id="comingsoon" src="graphics/comingsoon.180x63.svg" width="180" height="63">
 			</div>
 		</div>
-	</div>
+	</section>
 </section>
 
 
