--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
 
-<section id="sky-phase" class="line-height-rel">
+<section id="sky-phase" class="line-height-rel monologue">
 	<div class="back clip">
 		<div class="back fixed">
 			<div class="back fill"></div>
@@ -34,61 +34,61 @@
 	
 	<section class="container vh-100">
 		<div class="vert-middle-block">
-			<p class="monologue">
+			<div class="inner">
 				<span class="verse text-center">there you are.</span>
 				<span class="verse text-left col-xs-offset-6 col-xs-6">I missed you.</span>
-			</p>
+			</div>
 		</div>
 	</section>
 	<section class="container vh-75">
 		<div class="vert-middle-block">
-			<p class="monologue">
+			<div class="inner">
 				<span class="verse text-center">you know what I've been thinking a lot about lately?</span>
 				<span class="verse text-center">the stars</span>
-			</p>
+			</div>
 		</div>
 	</section>
 	<section class="container vh-75">
 		<div class="vert-middle-block">
-			<p class="monologue">
+			<div class="inner">
 				<span class="verse text-center">the constellations were named by the ancient Greeks…</span>
 				<span class="verse text-center">and those stars are still there</span>
 				<span class="verse text-center">as <b>bright</b> as they always have been.</span>
-			</p>
+			</div>
 		</div>
 	</section>
 </section>
-<section id="ambitions-phase" class="base-height-rel">
+<section id="ambitions-phase" class="base-height-rel monologue">
 	<div class="back fill"></div>
 	
 	<section class="container vh-50">
 		<div class="vert-middle-block">
-			<p class="monologue">
+			<div class="inner">
 				<span class="verse text-center">I want to leave my mark, so no one ever forgets</span>
 				<span class="verse text-center">my dream</span>
 				<span class="verse text-right col-xs-6">to shine like a <b>star</b>,</span>
 				<span class="verse text-center">a <b>dazzling light</b>,</span>
 				<span class="verse text-left col-xs-offset-6 col-xs-6">against the cold expanse.</span>
-			</p>
+			</div>
 		</div>
 	</section>
 	<section class="container vh-50">
 		<div class="vert-middle-block">
-			<p class="monologue">
+			<div class="inner">
 				<span class="verse text-center">my story</span>
 				<span class="verse text-center">fulfilling my dreams of skating not just for myself</span>
 				<span class="verse text-center">but <b>for everyone</b>.</span>
-			</p>
+			</div>
 		</div>
 	</section>
 	<section class="container vh-50">
 		<div class="vert-middle-block">
-			<p class="monologue">
+			<div class="inner">
 				<span class="verse text-center">my constellation</span>
 				<span class="verse text-right col-xs-6">my <b>mark</b> on this lake,</span>
 				<span class="verse text-center"><b>my canvas</b></span>
 				<span class="verse text-left col-xs-offset-6 col-xs-6">my piece of the <b>world</b>.</span>
-			</p>
+			</div>
 		</div>
 	</section>
 </section>
