--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
 	<section class="container vh-100">
 		<div class="vert-middle-block">
 			<div class="inner">
-				<span class="verse text-center">there you are.</span>
-				<span class="verse text-left col-xs-offset-6 col-xs-6">I missed you.</span>
+				<h1>
+					<span class="verse text-center">there you are.</span>
+					<small class="verse text-left col-xs-offset-6 col-xs-6">I missed you.</small>
+				</h1>
 			</div>
 		</div>
 	</section>
@@ -44,7 +46,7 @@
 		<div class="vert-middle-block">
 			<div class="inner">
 				<span class="verse text-center">you know what I've been thinking a lot about lately?</span>
-				<span class="verse text-center">the stars</span>
+				<header class="verse text-center">the stars</header>
 			</div>
 		</div>
 	</section>
@@ -65,7 +67,7 @@
 		<div class="vert-middle-block">
 			<div class="inner">
 				<span class="verse text-center">I want to leave my mark, so no one ever forgets</span>
-				<span class="verse text-center">my dream</span>
+				<header class="verse text-center">my dream</header>
 				<span class="verse text-right col-xs-6">to shine like a <b>star</b>,</span>
 				<span class="verse text-center">a <b>dazzling light</b>,</span>
 				<span class="verse text-left col-xs-offset-6 col-xs-6">against the cold expanse.</span>
@@ -75,19 +77,19 @@
 	<section class="container vh-50">
 		<div class="vert-middle-block">
 			<div class="inner">
-				<span class="verse text-center">my story</span>
+				<header class="verse text-center">my story</header>
 				<span class="verse text-center">fulfilling my dreams of skating not just for myself</span>
-				<span class="verse text-center">but <b>for everyone</b>.</span>
+				<span class="verse text-center">but <b><em>for everyone</em></b>.</span>
 			</div>
 		</div>
 	</section>
 	<section class="container vh-50">
 		<div class="vert-middle-block">
 			<div class="inner">
-				<span class="verse text-center">my constellation</span>
+				<header class="verse text-center">my constellation</header>
 				<span class="verse text-right col-xs-6">my <b>mark</b> on this lake,</span>
-				<span class="verse text-center"><b>my canvas</b></span>
-				<span class="verse text-left col-xs-offset-6 col-xs-6">my piece of the <b>world</b>.</span>
+				<span class="verse text-center"><b><em>my canvas</b></em></span>
+				<span class="verse text-left col-xs-offset-6 col-xs-6"><em>my piece of the <b>world</b>.</em></span>
 			</div>
 		</div>
 	</section>
@@ -98,12 +100,12 @@
 	</div>
 	
 	<section class="container vh-100">
-		<div id="title-logo">
+		<header id="title-logo">
 			<div class="inner">
 				<img id="lacquer" src="graphics/logo_lacquer_slanted.293x164.svg" width="293" height="164">
 				<img id="fromdreamstoice" src="graphics/logo_fromdreamstoice_slanted.290x165.svg" width="290" height="165">
 			</div>
-		</div>
+		</header>
 		<div id="title-closing">
 			<div class="inner">
 				<div class="statement">Leave your mark this winter.</div>
