--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<div class="inner">
 				<h1>
 					<span class="verse text-center">there you are.</span>
-					<small class="verse text-left col-xs-offset-6 col-xs-6">I missed you.</small>
+					<small class="verse text-left col-xs-offset-6 col-xs-6"><i>I missed you.</i></small>
 				</h1>
 			</div>
 		</div>
@@ -54,8 +54,8 @@
 		<div class="vert-middle-block">
 			<div class="inner">
 				<span class="verse text-center">the constellations were named by the ancient Greeks…</span>
-				<span class="verse text-center">and those stars are still there</span>
-				<span class="verse text-center">as <b>bright</b> as they always have been.</span>
+				<i class="verse text-center">and those stars are still there</i>
+				<i class="verse text-center">as <b>bright</b> as they always have been.</i>
 			</div>
 		</div>
 	</section>
@@ -66,11 +66,11 @@
 	<section class="container vh-50">
 		<div class="vert-middle-block">
 			<div class="inner">
-				<span class="verse text-center">I want to leave my mark, so no one ever forgets</span>
+				<i class="verse text-center">I want to leave my mark, so no one ever forgets</i>
 				<header class="verse text-center">my dream</header>
-				<span class="verse text-right col-xs-6">to shine like a <b>star</b>,</span>
-				<span class="verse text-center">a <b>dazzling light</b>,</span>
-				<span class="verse text-left col-xs-offset-6 col-xs-6">against the cold expanse.</span>
+				<i class="verse text-right col-xs-6">to shine like a <b>star</b>,</i>
+				<i class="verse text-center">a <b>dazzling light</b>,</i>
+				<i class="verse text-left col-xs-offset-6 col-xs-6">against the cold expanse.</i>
 			</div>
 		</div>
 	</section>
@@ -78,8 +78,8 @@
 		<div class="vert-middle-block">
 			<div class="inner">
 				<header class="verse text-center">my story</header>
-				<span class="verse text-center">fulfilling my dreams of skating not just for myself</span>
-				<span class="verse text-center">but <b><em>for everyone</em></b>.</span>
+				<i class="verse text-center">fulfilling my dreams of skating not just for myself</i>
+				<i class="verse text-center">but <b><em>for everyone</em></b>.</i>
 			</div>
 		</div>
 	</section>
@@ -87,9 +87,9 @@
 		<div class="vert-middle-block">
 			<div class="inner">
 				<header class="verse text-center">my constellation</header>
-				<span class="verse text-right col-xs-6">my <b>mark</b> on this lake,</span>
-				<span class="verse text-center"><b><em>my canvas</b></em></span>
-				<span class="verse text-left col-xs-offset-6 col-xs-6"><em>my piece of the <b>world</b>.</em></span>
+				<i class="verse text-right col-xs-6">my <b>mark</b> on this lake,</i>
+				<i class="verse text-center"><b><em>my canvas</b></em></i>
+				<i class="verse text-left col-xs-offset-6 col-xs-6"><em>my piece of the <b>world</b>.</em></i>
 			</div>
 		</div>
 	</section>
