Left/right padding
• New `.text-pad-left-*`/`.text-pad-right-*` classes provide `padding-left`/`-right` presets in `em` increments of `0.25`, `0.333`, `0.5`, `0.666`, `0.75`, `1`, `1.25`, `1.333`, `1.5`, `1.666`, `1.75`, `2`, and `2.5`.
	• Placed `.text-pad-right-*`s on left-half/text-right cols and `.text-pad-left-*`s on right-half/text-left cols to match the mockup.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<div class="inner">
 				<h1>
 					<span class="verse text-center">there you are.</span>
-					<small class="verse text-left col-xs-offset-6 col-xs-6"><i>I missed you.</i></small>
+					<small class="verse text-left col-xs-offset-6 col-xs-6 text-pad-left-1_25"><i>I missed you.</i></small>
 				</h1>
 			</div>
 		</div>
@@ -68,9 +68,9 @@
 			<div class="inner">
 				<i class="verse text-center">I want to leave my mark, so no one ever forgets</i>
 				<header class="verse text-center">my dream</header>
-				<i class="verse text-right col-xs-6">to shine like a <b>star</b>,</i>
+				<i class="verse text-right col-xs-6 text-pad-right-2_5">to shine like a <b>star</b>,</i>
 				<i class="verse text-center">a <b>dazzling light</b>,</i>
-				<i class="verse text-left col-xs-offset-6 col-xs-6">against the cold expanse.</i>
+				<i class="verse text-left col-xs-offset-6 col-xs-6 text-pad-left-1_333">against the cold expanse.</i>
 			</div>
 		</div>
 	</section>
@@ -87,9 +87,9 @@
 		<div class="vert-middle-block">
 			<div class="inner">
 				<header class="verse text-center">my constellation</header>
-				<i class="verse text-right col-xs-6">my <b>mark</b> on this lake,</i>
+				<i class="verse text-right col-xs-6 text-pad-right-1_333">my <b>mark</b> on this lake,</i>
 				<i class="verse text-center"><b><em>my canvas</b></em></i>
-				<i class="verse text-left col-xs-offset-6 col-xs-6"><em>my piece of the <b>world</b>.</em></i>
+				<i class="verse text-left col-xs-offset-6 col-xs-6 text-pad-left-2"><em>my piece of the <b>world</b>.</em></i>
 			</div>
 		</div>
 	</section>
