--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
 		<script src="bower_components/jquery/dist/jquery.min.js"></script>
 		<!-- Include all compiled plugins (below), or include individual files as needed -->
 		<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+		<script src="bower_components/viewport-units-buggyfill/viewport-units-buggyfill.js"></script>
+		<script>window.viewportUnitsBuggyfill.init();</script>
 		<script src="bower_components/skrollr-stylesheets/dist/skrollr.stylesheets.min.js"></script>
 		<script src="bower_components/skrollr/src/skrollr.js"></script>
 		<!--[if lt IE 9]><script type="text/javascript" src="bower_components/skrollr-ie/dist/skrollr.ie.min.js"></script><![endif]-->
