Added sparkles to #title-phase
• Added another `.back.image` to `#title-phase`, #sparkles.
• Added a simplification of the `.generateStarfieldRules()` rules to #sparkles to animate them upward with the title_phase.
	» It's actually not that different from `#lakestrip`'s animation code either.

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 <section id="title-phase" class="screen-height-rel">
 	<div class="back fill">
 		<div id="lakestrip" class="back image"></div>
+		<div id="sparkles" class="back image"></div>
 	</div>
 	
 	<section class="container vh-100">
