Added #scrolldown.overlay in #sky-phase
• New #scrolldown element in #sky-phase is an img srcing `scrolldown.75x124.svg`.
• `.phase > .overlay` CSS sets its `position` to `fixed`.
• `#sky-phase > .overlay#scrolldown` CSS sizes it down a bit, tacks it to the bottom-right corner, and makes it fade out after having scrolled down 30px.

--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
 			</div>
 		</div>
 	</section>
+	
+	<img id="scrolldown" class="overlay" src="graphics/scrolldown.75x124.svg" width="75" height="124">
 </section>
 <section id="ambitions-phase" class="base-height-rel monologue">
 	<div class="back fill"></div>
