Added <img> alt attributes
• Added alt attributes to all images with text in them.
	» How could I have been so silly as to forget them?

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		</div>
 	</section>
 	
-	<img id="scrolldown" class="overlay" src="graphics/scrolldown.75x124.svg" width="75" height="124">
+	<img id="scrolldown" class="overlay" src="graphics/scrolldown.75x124.svg" width="75" height="124" alt="scroll ↓">
 </section>
 <section id="ambitions-phase" class="base-height-rel monologue">
 	<div class="back fill"></div>
@@ -105,8 +105,8 @@
 	<section class="container vh-100">
 		<header id="title-logo">
 			<div class="inner">
-				<img id="lacquer" src="graphics/logo_lacquer_slanted.293x164.svg" width="293" height="164">
-				<img id="fromdreamstoice" src="graphics/logo_fromdreamstoice_slanted.290x165.svg" width="290" height="165">
+				<img id="lacquer" src="graphics/logo_lacquer_slanted.293x164.svg" width="293" height="164" alt="Lacquer">
+				<img id="fromdreamstoice" src="graphics/logo_fromdreamstoice_slanted.290x165.svg" width="290" height="165" alt="From Dreams To Ice">
 			</div>
 		</header>
 		<div id="title-closing">
@@ -117,12 +117,14 @@
 		</div>
 		<div id="title-bottom">
 			<div class="inner">
-				<img id="comingsoon" src="graphics/comingsoon.180x63.svg" width="180" height="63">
+				<img id="comingsoon" src="graphics/comingsoon.180x63.svg" width="180" height="63" alt="Coming soon to the App Store">
 			</div>
 		</div>
 	</section>
 	
-	<a id="versuskidspresent" class="overlay" href="http://versuskids.com/"><img src="graphics/logo_versuskidspresent.98x68.svg" width="98" height="68"></a>
+	<a id="versuskidspresent" class="overlay" href="http://versuskids.com/">
+		<img src="graphics/logo_versuskidspresent.98x68.svg" width="98" height="68" alt="Versus Kids Present:">
+	</a>
 </section>
 
 
