--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="maximum-scale=1.0">
 		
-		<title>Basic Bootstrap Template</title>
+		<title>Lacquer: From Dreams To Ice - iOS game coming this winter to the App Store</title>
 		
 		<!-- Bootstrap -->
 		<link href="css/styles.css" rel="stylesheet" type="text/css" data-skrollr-stylesheet>
