Added #purplestars-border at top of #title-phase
• Added a `#purplestars-border.back.image` to #title-phase's back-fill.
• Added `#purplestars-border` CSS to size it to 1/3 it's natural size, make the height !important (there's probably a better way to do this), and position above the top edge by half its height.

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 <!--section id="ambitions-phase" class="base-height-rel monologue"></section-->
 <section id="title-phase" class="screen-height-rel">
 	<div class="back fill">
+		<div id="purplestars-border" class="back image"></div>
 		<div id="lakestrip" class="back image"></div>
 		<div id="sparkles" class="back image"></div>
 	</div>
