--- a/index.html
+++ b/index.html
@@ -140,6 +140,18 @@ ga('send', 'pageview');
 		</script>
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 		<script src="bower_components/jquery/dist/jquery.min.js"></script>
+		<script src="bower_components/scroll-depth/jquery.scrolldepth.min.js"></script>
+		<script>
+$(function() {
+	$.scrollDepth({
+		elements: ['#sky-phase', '#title-phase', '#title-logo', '#title-closing', '#title-bottom'],
+		percentage: true,
+		userTiming: true,
+		pixelDepth: true,
+		nonInteraction: false,
+	});
+});
+		</script>
 		<!-- Include all compiled plugins (below), or include individual files as needed -->
 		<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 		<script src="bower_components/viewport-units-buggyfill/viewport-units-buggyfill.js"></script>
