Minor: Fixed W3C validation errors
• Fixed W3C validation errors (caused by a couple of dumb mistakes on my part):
	◦ Line 90, Column 53: End tag b violates nesting rules.
	◦ Line 90, Column 58: No em element in scope but a em end tag seen.
	◦ Line 114, Column 91: An img element must have an alt attribute, except under certain conditions.

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 			<div class="inner">
 				<header class="verse text-center">my constellation</header>
 				<i class="verse text-right col-xs-6 text-pad-right-1_333">my <b>mark</b> on this lake,</i>
-				<i class="verse text-center"><b><em>my canvas</b></em></i>
+				<i class="verse text-center"><b><em>my canvas</em></b></i>
 				<i class="verse text-left col-xs-offset-6 col-xs-6 text-pad-left-2"><em>my piece of the <b>world</b>.</em></i>
 			</div>
 		</div>
@@ -111,7 +111,7 @@
 		<div id="title-closing">
 			<div class="inner">
 				<div class="statement">Leave your mark this winter.</div>
-				<img id="stargazer" src="graphics/char_stargazer.267x139.svg" width="267" height="139">
+				<img id="stargazer" src="graphics/char_stargazer.267x139.svg" width="267" height="139" alt="stargaze'n sally">
 			</div>
 		</div>
 		<div id="title-bottom">
