Split footer into a full-width container
• Split the `.title-bottom` footer off into its own full-width `.fluid-container`, with a height of `vh-12_5`.
	• Added `vh-…` presents for `12_5` (12.5) and `25`.
• Adjusted `title-closing`’s top and bottom to fill the space it now has to itself (top +10%, bottom −10%).

--- a/index.html
+++ b/index.html
@@ -114,6 +114,8 @@
 				<img id="stargazer" src="graphics/char_stargazer.267x139.svg" width="267" height="139" alt="stargaze'n sally">
 			</div>
 		</div>
+	</section>
+	<section class="container-fluid vh-12_5">
 		<div id="title-bottom">
 			<div class="inner">
 				<img id="comingsoon" src="graphics/comingsoon.180x63.svg" width="180" height="63" alt="Coming soon to the App Store">
