Superminor: Changed `stargazer` alt text
• Updated Changed `stargazer`’s alt text from “stargaze’n sally” to “Starsha, stargaze’n”.
	» We hadn’t settled on a name at the time this was written.

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 		<div id="title-closing">
 			<div class="inner">
 				<div class="statement">Leave your mark this winter.</div>
-				<img id="stargazer" src="graphics/char_stargazer.267x139.svg" width="267" height="139" alt="stargaze'n sally">
+				<img id="stargazer" src="graphics/char_stargazer.267x139.svg" width="267" height="139" alt="Starsha, stargazing">
 			</div>
 		</div>
 	</section>
