Footer social media icons (Twitter, FB, IG, Tumblr)
• Changed the `#comingsoon` to be pinned to the bottom-right instead of the bottom-left.
• Created `icon_….bordered.s63.svg` variants of the existing `icon_….s20.svg` icons modified to have black graphics with a white outline, to match the style of the “Coming soon” graphic.
	» Skipped `icon_youtube.s20.svg` because it Illustrator reports an “unknown error [PGFp]” when trying to open it.  Weird.
• Created a new bottom-left-pinned `#badges` <div> in the HTML just before the `#comingsoon`, added <a>-wrapped <img>s to it, and styled them to be the same height as the `#comingsoon`.

--- a/index.html
+++ b/index.html
@@ -118,6 +118,12 @@
 	<section class="container-fluid vh-12_5">
 		<div id="title-bottom">
 			<div class="inner">
+				<div id="badges">
+					<a href="https://twitter.com/vskids"><img id="badge-twitter" src="graphics/icon_twitter.bordered.s63.svg" width="63" height="63" alt="Twitter @vskids"></a>
+					<a href="https://www.facebook.com/versuskids"><img id="badge-facebook" src="graphics/icon_facebook.bordered.s63.svg" width="63" height="63" alt="Facebook/versuskids"></a>
+					<a href="http://instagram.com/vskids"><img id="badge-instagram" src="graphics/icon_instagram.bordered.s63.svg" width="63" height="63" alt="Instagram @vskids"></a>
+					<a href="http://vskids.tumblr.com/"><img id="badge-tumblr" src="graphics/icon_tumblr.bordered.s63.svg" width="63" height="63" alt="vskids.Tumblr"></a>
+				</div>
 				<img id="comingsoon" src="graphics/comingsoon.180x63.svg" width="180" height="63" alt="Coming soon to the App Store">
 			</div>
 		</div>
