--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
 		<div id="title-bottom">
 			<div class="inner">
 				<div id="badges">
-					<a href="https://twitter.com/vskids"><img id="badge-twitter" src="graphics/icon_twitter.bordered.s63.svg" width="63" height="63" alt="Twitter @vskids"></a>
-					<a href="https://www.facebook.com/versuskids"><img id="badge-facebook" src="graphics/icon_facebook.bordered.s63.svg" width="63" height="63" alt="Facebook/versuskids"></a>
-					<a href="http://instagram.com/vskids"><img id="badge-instagram" src="graphics/icon_instagram.bordered.s63.svg" width="63" height="63" alt="Instagram @vskids"></a>
-					<a href="http://vskids.tumblr.com/"><img id="badge-tumblr" src="graphics/icon_tumblr.bordered.s63.svg" width="63" height="63" alt="vskids.Tumblr"></a>
+					<a id="badge-twitter" href="https://twitter.com/vskids"><img src="graphics/icon_twitter.bordered.s63.svg" width="63" height="63" alt="Twitter @vskids"></a>
+					<a id="badge-facebook" href="https://www.facebook.com/versuskids"><img src="graphics/icon_facebook.bordered.s63.svg" width="63" height="63" alt="Facebook/versuskids"></a>
+					<a id="badge-instagram" href="http://instagram.com/vskids"><img src="graphics/icon_instagram.bordered.s63.svg" width="63" height="63" alt="Instagram @vskids"></a>
+					<a id="badge-tumblr" href="http://vskids.tumblr.com/"><img src="graphics/icon_tumblr.bordered.s63.svg" width="63" height="63" alt="vskids.Tumblr"></a>
 				</div>
 				<img id="comingsoon" src="graphics/comingsoon.180x63.svg" width="180" height="63" alt="Coming soon to the App Store">
 			</div>
